--- a/app.json
+++ b/app.json
@@ -42,6 +42,21 @@
         "value": "",
         "required": true
       },
+      "OWNER_USERNAME":{
+        "description": "OWNER USERNAME"
+        "value": "",
+        "required": true
+      },
+      "SUPPORT_CHAT":{
+        "description": "CHAT"
+        "value": "",
+        "required": true
+      },
+      "SUPPORT_CHANNEL":{
+        "description": "CHANNEL"
+        "value": "",
+        "required": true
+      },
       "HEROKU_API_KEY": {
         "description": "𝐅𝐈𝐋𝐋 𝐇𝐄𝐑𝐄 𝐘𝐎𝐔𝐑 𝐇𝐄𝐑𝐎𝐊𝐔 𝐀𝐂𝐂. 𝐀𝐏𝐈 𝐊𝐄𝐘, 𝐈𝐅 𝐃𝐎𝐍𝐓 𝐊𝐍𝐎𝐖 𝐓𝐇𝐈𝐒 𝐓𝐇𝐄𝐍 𝐋𝐄𝐀𝐕𝐄 𝐓𝐇𝐈𝐒 𝐋𝐈𝐍𝐄 𝐁𝐋𝐀𝐍𝐊",
         "value": "",
